--- a/MattermostBot/MattermostBot.csproj
+++ b/MattermostBot/MattermostBot.csproj
@@ -6,13 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MattermostApi" Version="1.0.35" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\MattermostApiAdapter\MattermostApiAdapter.csproj" />
   </ItemGroup>
 
   <ItemGroup>
