Изменила имена некоторых параметров в конфиге и имена связанных полей.

--- a/MattermostBot/appsettings.json
+++ b/MattermostBot/appsettings.json
@@ -1,7 +1,7 @@
 {
 	"MattermostUri": "http://localhost:8065/",
-	"BotToken": "xoxb-2344320041938-2368062522496-DXPQtHykKzWH3iWni9YAF4Fg",
-	"BotID": "U02AU1UFCEL",
+	"AccessToken": "xoxb-2344320041938-2368062522496-DXPQtHykKzWH3iWni9YAF4Fg",
+	"BotUserID": "U02AU1UFCEL",
 	"Channels": [
 		{
 			"ChannelID": "C02A4F4K4E7",
