--- a/MattermostBot/appsettings.json
+++ b/MattermostBot/appsettings.json
@@ -2,6 +2,7 @@
 	"MattermostUri": "http://localhost:8065/",
 	"AccessToken": "xoxb-2344320041938-2368062522496-DXPQtHykKzWH3iWni9YAF4Fg",
 	"BotUserID": "U02AU1UFCEL",
+	"SleepTimeDuration": "3600000",
 	"Channels": [
 		{
 			"ChannelID": "C02A4F4K4E7",
