Доработки под МКДО

--- a/MattermostBot/appsettings.json
+++ b/MattermostBot/appsettings.json
@@ -9,14 +9,27 @@
 			"DaysBeforeWarning": "7",
 			"DaysBeforeUnpining": "3",
 			"AutoPinNewMessage": true,
-			"WelcomeMessage": ""
+			"WelcomeMessage": "",
+			"ReactionRequest": "",
+			"WelcomeThreadMessage": false
 		},
 		{
 			"ChannelID": "C02AAF2FAEQ",
 			"DaysBeforeWarning": "7",
 			"DaysBeforeUnpining": "3",
 			"AutoPinNewMessage": false,
-			"WelcomeMessage": "Hello!!!"
+			"WelcomeMessage": "Hello!!!",
+			"ReactionRequest": "",
+			"WelcomeThreadMessage": false
+		},
+		{
+			"ChannelID": "C02AAF2FAEQ", 
+			"DaysBeforeWarning": "7",
+			"DaysBeforeUnpining": "3",
+			"AutoPinNewMessage": false,
+			"WelcomeMessage": "",
+			"ReactionRequest": "\"emoji_name\": \"heavy_check_mark\"",
+			"WelcomeThreadMessage": true			
 		}
 	]
 }
