--- a/MattermostBot/appsettings.json
+++ b/MattermostBot/appsettings.json
@@ -1,35 +1,27 @@
 {
-	"MattermostUri": "http://localhost:8065/",
-	"AccessToken": "xoxb-2344320041938-2368062522496-DXPQtHykKzWH3iWni9YAF4Fg",
-	"BotUserID": "U02AU1UFCEL",
-	"ChannelCheckPeriodInMinutes": "60",
+	// "MattermostUri": "http://localhost:8065/",
+	"MattermostUri": "http://w714s19:8065/",
+	//"AccessToken": "xoxb-2344320041938-2368062522496-DXPQtHykKzWH3iWni9YAF4Fg",
+	"AccessToken": "nfpqgincsjnpub8b5oifoaea4o",
+	"BotUserID": "nzq4yx8n37f65mx9hqz16occaa",
+	"ChannelCheckPeriodInMinutes": "1",
 	"Channels": [
 		{
-			"ChannelID": "C02A4F4K4E7",
-			"DaysBeforeWarning": "7",
-			"DaysBeforeUnpining": "3",
+			"ChannelID": "6he3y6qw8b8z3ggfk6mtrarrjw",
+			"DaysBeforeWarning": "30",
+			"DaysBeforeUnpining": "7",
 			"AutoPinNewMessage": true,
-			"WelcomeMessage": "",
-			"ReactionRequest": "",
-			"WelcomeThreadMessage": false
-		},
-		{
-			"ChannelID": "C02AAF2FAEQ",
-			"DaysBeforeWarning": "7",
-			"DaysBeforeUnpining": "3",
-			"AutoPinNewMessage": false,
 			"WelcomeMessage": "Hello!!!",
-			"ReactionRequest": "",
-			"WelcomeThreadMessage": false
-		},
+			"ReactionRequest": "heavy_check_mark",
+			"WelcomeThreadMessage": "Вас приветствует команда МКДО! \n На ваш вопрос ответят при первой возможности. \n Для оперативной техподдержки при обращении через текущий канал предлагаем убедиться, что функционал относится к продуктам, поддерживаемым командой МКДО. Проверьте, что Вы указали версию системы DIRECTUM (и/или службы DISI) с точностью до номера редакции релиза, и предоставили достаточно информации для последующего анализа и поиска причин наблюдаемого поведения системы. Например, полные логи службы DISI, логи SBRte или служб IS-Builder, трейсы SQL сервера, записи журнала Windows, логи сценариев, и т.д."
+
+		}/*,
 		{
-			"ChannelID": "C02AAF2FAEQ", 
+			"ChannelID": " 6he3y6qw8b8z3ggfk6mtrarrjw",
 			"DaysBeforeWarning": "7",
 			"DaysBeforeUnpining": "3",
 			"AutoPinNewMessage": false,
-			"WelcomeMessage": "",
-			"ReactionRequest": "\"emoji_name\": \"heavy_check_mark\"",
-			"WelcomeThreadMessage": true			
-		}
+			"WelcomeMessage": "Hello!!!"
+		}*/
 	]
 }
