Причесала оформление кода

--- a/MattermostBot/appsettings.json
+++ b/MattermostBot/appsettings.json
@@ -1,27 +1,28 @@
 {
-	// "MattermostUri": "http://localhost:8065/",
-	"MattermostUri": "http://w714s19:8065/",
-	//"AccessToken": "xoxb-2344320041938-2368062522496-DXPQtHykKzWH3iWni9YAF4Fg",
-	"AccessToken": "nfpqgincsjnpub8b5oifoaea4o",
-	"BotUserID": "nzq4yx8n37f65mx9hqz16occaa",
+	 "MattermostUri": "http://localhost:8065/",
+	
+	"AccessToken": "xoxb-2344320041938-2368062522496-DXPQtHykKzWH3iWni9YAF4Fg",
+	"BotUserID": "U02AU1UFCEL",
 	"ChannelCheckPeriodInMinutes": "1",
 	"Channels": [
 		{
-			"ChannelID": "6he3y6qw8b8z3ggfk6mtrarrjw",
+			"ChannelID": "C02A4F4K4E7",
 			"DaysBeforeWarning": "30",
 			"DaysBeforeUnpining": "7",
 			"AutoPinNewMessage": true,
 			"WelcomeMessage": "Hello!!!",
-			"ReactionRequest": "heavy_check_mark",
-			"WelcomeThreadMessage": "Вас приветствует команда МКДО! \n На ваш вопрос ответят при первой возможности. \n Для оперативной техподдержки при обращении через текущий канал предлагаем убедиться, что функционал относится к продуктам, поддерживаемым командой МКДО. Проверьте, что Вы указали версию системы DIRECTUM (и/или службы DISI) с точностью до номера редакции релиза, и предоставили достаточно информации для последующего анализа и поиска причин наблюдаемого поведения системы. Например, полные логи службы DISI, логи SBRte или служб IS-Builder, трейсы SQL сервера, записи журнала Windows, логи сценариев, и т.д."
+			"ReactionRequest": "",
+			"WelcomeThreadMessage": ""
 
-		}/*,
+		},
 		{
-			"ChannelID": " 6he3y6qw8b8z3ggfk6mtrarrjw",
+			"ChannelID": " C02AAF2FAEQ",
 			"DaysBeforeWarning": "7",
 			"DaysBeforeUnpining": "3",
 			"AutoPinNewMessage": false,
-			"WelcomeMessage": "Hello!!!"
-		}*/
+			"WelcomeMessage": "Hello!!!",
+			"ReactionRequest": "",
+			"WelcomeThreadMessage": ""
+		}
 	]
 }
