--- a/MattermostBot/appsettings.json
+++ b/MattermostBot/appsettings.json
@@ -3,7 +3,7 @@
 	"AccessToken": "xoxb-2344320041938-2368062522496-DXPQtHykKzWH3iWni9YAF4Fg",
 	"BotUserID": "U02AU1UFCEL",
 	"ChannelCheckPeriodInMinutes": "60",
-	"PathToDownloadDirectory": "D:\\TestDownload",
+	"PathToDownloadDirectory": "D:/TestDownload",
 	"Channels": [
 		{
 			"ChannelID": "C02A4F4K4E7",
